prove sass header, errore variabili in commons

--- a/teambit.html
+++ b/teambit.html
@@ -7,8 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="wrapper-header">
-        <h1>Funziona</h1>
+      <div class="header_wrapper">
+        <div class="head_left">
+          <img src="https://www.boolean.careers/images/common/logo.png" alt="">
+        </div>
+        <div class="head_right">
+          <ul>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sign in</a></li>
+            <li><a class="button"href="#"> <img src="" alt=""> Sign Up</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
